--- a/Celebratorica/app/src/main/res/values/colors.xml
+++ b/Celebratorica/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="colorPrimary">#3F51B5</color>
-	<color name="colorPrimaryDark">#303F9F</color>
-	<color name="colorAccent">#FF4081</color>
+	<color name="primary">@color/amber_600</color>
+	<color name="primary_dark">@color/amber_800</color>
+	<color name="accent">@color/light_green_A700</color>
 </resources>
