--- a/Celebratorica/app/src/main/res/values/colors.xml
+++ b/Celebratorica/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
 	<color name="primary">@color/amber_600</color>
 	<color name="primary_dark">@color/amber_800</color>
 	<color name="accent">@color/light_green_A700</color>
+
+	<color name="material_showcase_background">#F5FFB300</color>
+	<color name="material_showcase_background_dismiss">@color/accent</color>
 </resources>
