--- a/Celebratorica/app/src/main/res/menu/menu_default.xml
+++ b/Celebratorica/app/src/main/res/menu/menu_default.xml
@@ -3,6 +3,11 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto">
 
 	<item
+		android:id="@+id/action_open_article"
+		android:title="@string/open_article_menu"
+		app:showAsAction="never" />
+
+	<item
 		android:id="@+id/action_feedback"
 		android:title="@string/feedback_menu"
 		app:showAsAction="never" />
