Add legal information to the app

--- a/Celebratorica/app/src/main/res/menu/menu_default.xml
+++ b/Celebratorica/app/src/main/res/menu/menu_default.xml
@@ -11,4 +11,9 @@
 		android:id="@+id/action_feedback"
 		android:title="@string/feedback_menu"
 		app:showAsAction="never" />
+
+	<item
+		android:id="@+id/action_legal"
+		android:title="@string/legal_title"
+		app:showAsAction="never" />
 </menu>
