--- a/Celebratorica/app/src/main/res/layout/fragment_item_view.xml
+++ b/Celebratorica/app/src/main/res/layout/fragment_item_view.xml
@@ -14,9 +14,9 @@
 			style="@style/Material.Toolbar"
 			android:title="@string/app_name" />
 
-		<android.support.v7.widget.RecyclerView
-			android:id="@+id/celebration_list_view"
-			style="@style/Material.List.WithFloatingActionButton" />
+		<android.support.v4.view.ViewPager
+			android:id="@+id/view_pager"
+			style="@style/Material.List" />
 	</LinearLayout>
 
 	<android.support.design.widget.FloatingActionButton
