--- a/Celebratorica/app/src/main/res/layout/fragment_item_view.xml
+++ b/Celebratorica/app/src/main/res/layout/fragment_item_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:id="@+id/coordinator_layout"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
@@ -13,6 +14,11 @@
 			android:id="@+id/toolbar"
 			style="@style/Material.Toolbar"
 			android:title="@string/app_name" />
+
+		<android.support.design.widget.TabLayout
+			android:id="@+id/view_pager_tabs"
+			style="@style/Material.TabLayout"
+			app:tabMode="scrollable" />
 
 		<android.support.v4.view.ViewPager
 			android:id="@+id/view_pager"
