--- a/Celebratorica/app/src/main/res/layout/fragment_item_view.xml
+++ b/Celebratorica/app/src/main/res/layout/fragment_item_view.xml
@@ -5,25 +5,29 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
-	<LinearLayout
+	<android.support.design.widget.AppBarLayout
+		android:id="@+id/appbar"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:orientation="vertical">
+		android:layout_height="wrap_content"
+		android:fitsSystemWindows="true">
 
 		<android.support.v7.widget.Toolbar
 			android:id="@+id/toolbar"
-			style="@style/Material.Toolbar"
+			style="@style/Material.Toolbar.Collapse"
 			android:title="@string/app_name" />
 
 		<android.support.design.widget.TabLayout
 			android:id="@+id/view_pager_tabs"
 			style="@style/Material.TabLayout"
+			android:layout_below="@id/toolbar"
 			app:tabMode="scrollable" />
 
-		<android.support.v4.view.ViewPager
-			android:id="@+id/view_pager"
-			style="@style/Material.List" />
-	</LinearLayout>
+	</android.support.design.widget.AppBarLayout>
+
+	<android.support.v4.view.ViewPager
+		android:id="@+id/view_pager"
+		style="@style/Material.ViewPager"
+		app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 	<android.support.design.widget.FloatingActionButton
 		android:id="@+id/add_button"
