--- a/Celebratorica/app/src/main/res/layout/fragment_category_dialog.xml
+++ b/Celebratorica/app/src/main/res/layout/fragment_category_dialog.xml
@@ -21,27 +21,14 @@
 		<android.support.design.widget.TextInputLayout
 			style="@style/Material.EditContainer"
 			app:counterEnabled="true"
-			app:counterMaxLength="@integer/item_text_length_max">
+			app:counterMaxLength="@integer/category_name_length_max">
 
 			<android.support.design.widget.TextInputEditText
-				android:id="@+id/text_edit"
+				android:id="@+id/name_edit"
 				style="@style/Material.Edit.WithLabel"
 				android:hint="@string/item_text"
 				android:imeOptions="actionNext"
 				android:inputType="textMultiLine" />
-		</android.support.design.widget.TextInputLayout>
-
-		<android.support.design.widget.TextInputLayout
-			android:id="@+id/date_header"
-			style="@style/Material.EditContainer">
-
-			<android.support.design.widget.TextInputEditText
-				android:id="@+id/date_edit"
-				style="@style/Material.Edit.WithLabel"
-				android:layout_height="wrap_content"
-				android:focusable="false"
-				android:hint="@string/item_date"
-				android:inputType="date" />
 		</android.support.design.widget.TextInputLayout>
 	</LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
