--- a/Celebratorica/app/src/main/res/layout/fragment_item_view.xml
+++ b/Celebratorica/app/src/main/res/layout/fragment_item_view.xml
@@ -16,11 +16,21 @@
 			style="@style/Material.Toolbar.Collapse"
 			android:title="@string/app_name" />
 
-		<android.support.design.widget.TabLayout
-			android:id="@+id/view_pager_tabs"
-			style="@style/Material.TabLayout"
-			android:layout_below="@id/toolbar"
-			app:tabMode="scrollable" />
+		<RelativeLayout style="@style/Material.TabLayoutContainer">
+
+			<android.support.v7.widget.AppCompatImageButton
+				android:id="@+id/add_category_button"
+				style="@style/Material.Button.Image"
+				android:layout_alignParentEnd="true"
+				android:src="@drawable/ic_add_24dp" />
+
+			<android.support.design.widget.TabLayout
+				android:id="@+id/view_pager_tabs"
+				style="@style/Material.TabLayout.InContainer"
+				android:layout_alignParentStart="true"
+				android:layout_toStartOf="@id/add_category_button"
+				app:tabMode="scrollable" />
+		</RelativeLayout>
 
 	</android.support.design.widget.AppBarLayout>
 
