--- a/Celebratorica/app/src/main/res/layout/fragment_category_dialog.xml
+++ b/Celebratorica/app/src/main/res/layout/fragment_category_dialog.xml
@@ -28,7 +28,7 @@
 				style="@style/Material.Edit.WithLabel"
 				android:hint="@string/item_text"
 				android:imeOptions="actionNext"
-				android:inputType="textMultiLine" />
+				android:inputType="text" />
 		</android.support.design.widget.TextInputLayout>
 	</LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
