--- a/Celebratorica/app/src/main/res/values/colors.xml
+++ b/Celebratorica/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
 	<color name="accent">@color/light_green_A700</color>
 
 	<color name="material_showcase_background">#F5FFB300</color>
+	<color name="material_showcase_background_inverted">#F564DD17</color>
 	<color name="material_showcase_background_dismiss">@color/accent</color>
+	<color name="material_showcase_background_dismiss_inverted">@color/amber_600</color>
 </resources>
