--- a/Celebratorica/app/src/main/res/menu/menu_default.xml
+++ b/Celebratorica/app/src/main/res/menu/menu_default.xml
@@ -13,7 +13,7 @@
 		app:showAsAction="never" />
 
 	<item
-		android:id="@+id/action_legal"
-		android:title="@string/legal_title"
+		android:id="@+id/action_settings"
+		android:title="@string/settings"
 		app:showAsAction="never" />
 </menu>
