Update to BlushineIO and Android Oreo

--- a/Celebratorica/app/src/main/res/xml/settings.xml
+++ b/Celebratorica/app/src/main/res/xml/settings.xml
@@ -7,7 +7,7 @@
 		android:key="@string/setting_reminder_key"
 		android:title="@string/setting_reminder_title" />
 
-	<com.spiddekauga.android.preference.TimePreference
+	<io.blushine.android.preference.TimePreference
 		android:defaultValue="@string/setting_reminder_time_1_default"
 		android:key="@string/setting_reminder_time_1_key"
 		android:title="@string/setting_reminder_time_title" />
