--- a/Celebratorica/app/src/main/res/menu/menu_default.xml
+++ b/Celebratorica/app/src/main/res/menu/menu_default.xml
@@ -7,10 +7,10 @@
 		android:title="@string/open_article_menu"
 		app:showAsAction="never" />
 
-	<item
-		android:id="@+id/action_feedback"
-		android:title="@string/feedback_menu"
-		app:showAsAction="never" />
+	<!--<item-->
+	<!--android:id="@+id/action_feedback"-->
+	<!--android:title="@string/feedback_menu"-->
+	<!--app:showAsAction="never" />-->
 
 	<item
 		android:id="@+id/action_settings"
