--- a/Celebratorica/app/src/main/res/menu/menu_default.xml
+++ b/Celebratorica/app/src/main/res/menu/menu_default.xml
@@ -7,13 +7,19 @@
 		android:title="@string/open_article_menu"
 		app:showAsAction="never" />
 
-	<!--<item-->
-	<!--android:id="@+id/action_feedback"-->
-	<!--android:title="@string/feedback_menu"-->
-	<!--app:showAsAction="never" />-->
-
 	<item
 		android:id="@+id/action_settings"
 		android:title="@string/settings"
+		app:showAsAction="never" />
+
+	<!-- TODO temporary sign-in / sign-out buttons -->
+	<item
+		android:id="@+id/action_sign_in"
+		android:title="@string/login"
+		app:showAsAction="never" />
+
+	<item
+		android:id="@+id/action_sign_out"
+		android:title="@string/logout"
 		app:showAsAction="never" />
 </menu>
