--- a/Celebratorica/app/src/main/res/layout/fragment_category_dialog.xml
+++ b/Celebratorica/app/src/main/res/layout/fragment_category_dialog.xml
@@ -27,7 +27,7 @@
 				android:id="@+id/name_edit"
 				style="@style/Material.Edit.WithLabel"
 				android:hint="@string/item_text"
-				android:imeOptions="actionNext"
+				android:imeOptions="actionDone"
 				android:inputType="text" />
 		</android.support.design.widget.TextInputLayout>
 	</LinearLayout>
