--- a/remember-my-wins/app/src/main/res/layout/fragment_item_dialog.xml
+++ b/remember-my-wins/app/src/main/res/layout/fragment_item_dialog.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:id="@+id/coordinator_layout"
 	android:layout_width="match_parent"
@@ -11,37 +11,37 @@
 		android:layout_marginBottom="@dimen/list_margin_top_bottom"
 		android:orientation="vertical">
 
-		<android.support.v7.widget.Toolbar
+		<androidx.appcompat.widget.Toolbar
 			android:id="@+id/toolbar"
 			style="@style/Material.Toolbar"
 			android:layout_marginBottom="@dimen/list_margin_top_bottom"
 			app:navigationIcon="@drawable/ic_clear_24dp"
 			app:theme="@style/Material" />
 
-		<android.support.design.widget.TextInputLayout
+		<com.google.android.material.textfield.TextInputLayout
 			style="@style/Material.EditContainer"
 			app:counterEnabled="true"
 			app:counterMaxLength="@integer/item_text_length_max">
 
-			<android.support.design.widget.TextInputEditText
+			<com.google.android.material.textfield.TextInputEditText
 				android:id="@+id/text_edit"
 				style="@style/Material.Edit.WithLabel"
 				android:hint="@string/item_text"
 				android:imeOptions="actionNext"
 				android:inputType="textMultiLine" />
-		</android.support.design.widget.TextInputLayout>
+		</com.google.android.material.textfield.TextInputLayout>
 
-		<android.support.design.widget.TextInputLayout
+		<com.google.android.material.textfield.TextInputLayout
 			android:id="@+id/date_header"
 			style="@style/Material.EditContainer">
 
-			<android.support.design.widget.TextInputEditText
+			<com.google.android.material.textfield.TextInputEditText
 				android:id="@+id/date_edit"
 				style="@style/Material.Edit.WithLabel"
 				android:layout_height="wrap_content"
 				android:focusable="false"
 				android:hint="@string/item_date"
 				android:inputType="date" />
-		</android.support.design.widget.TextInputLayout>
+		</com.google.android.material.textfield.TextInputLayout>
 	</LinearLayout>
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
