--- a/remember-my-wins/app/src/main/res/layout/fragment_item_view.xml
+++ b/remember-my-wins/app/src/main/res/layout/fragment_item_view.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:id="@+id/coordinator_layout"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
-	<android.support.design.widget.AppBarLayout
+	<com.google.android.material.appbar.AppBarLayout
 		android:id="@+id/appbar"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:fitsSystemWindows="true">
 
-		<android.support.v7.widget.Toolbar
+		<androidx.appcompat.widget.Toolbar
 			android:id="@+id/toolbar"
 			style="@style/Material.Toolbar.Collapse"
 			android:title="@string/app_name" />
 
 		<RelativeLayout style="@style/Material.TabLayoutContainer">
 
-			<android.support.v7.widget.AppCompatImageButton
+			<androidx.appcompat.widget.AppCompatImageButton
 				android:id="@+id/add_category_button"
 				style="@style/Material.Button.Image"
 				android:layout_alignParentEnd="true"
 				android:src="@drawable/ic_add_24dp" />
 
-			<android.support.design.widget.TabLayout
+			<com.google.android.material.tabs.TabLayout
 				android:id="@+id/view_pager_tabs"
 				style="@style/Material.TabLayout.InContainer"
 				android:layout_alignParentStart="true"
@@ -32,16 +32,16 @@
 				app:tabMode="scrollable" />
 		</RelativeLayout>
 
-	</android.support.design.widget.AppBarLayout>
+	</com.google.android.material.appbar.AppBarLayout>
 
-	<android.support.v4.view.ViewPager
+	<androidx.viewpager.widget.ViewPager
 		android:id="@+id/view_pager"
 		style="@style/Material.ViewPager"
 		app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-	<android.support.design.widget.FloatingActionButton
+	<com.google.android.material.floatingactionbutton.FloatingActionButton
 		android:id="@+id/add_button"
 		style="@style/Material.FloatingActionButton"
 		android:layout_alignParentBottom="true"
 		android:src="@drawable/ic_add_24dp" />
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
